@@ -1,0 +1,25 @@
+package:
+  name: binutils_stage1
+  version: 2.23.2
+
+source:
+  fn: binutils-2.23.2.tar.bz2
+  url: http://ftp.gnu.org/gnu/binutils/binutils-2.23.2.tar.bz2
+
+build:
+  # If this is a new build for the same version, increment the build
+  # number. If you do not include this key, it defaults to 0.
+  number: 1
+
+  string:
+     build_on_debian_wheezy__p33
+  
+requirements:
+  build:
+    - gmp_stage1
+    - mpfr_stage1
+    - mpc_stage1
+    
+about:
+    home: http://www.gnu.org/software/binutils/
+    license: GPL
