@@ -1,0 +1,19 @@
+package:
+  name: gmp_stage1
+  version: 5.1.3
+
+source:
+  fn: gmp-5.1.3.tar.xz
+  url: http://ftp.gnu.org/gnu/gmp/gmp-5.1.3.tar.xz
+
+build:
+  # If this is a new build for the same version, increment the build
+  # number. If you do not include this key, it defaults to 0.
+  number: 1
+
+  string:
+     build_on_debian_wheezy__p33
+
+about:
+  home: http://gmplib.org/
+  license: GPL 3
