@@ -1,0 +1,23 @@
+package:
+  name: gwak_stage1
+  version: 4.1.0
+
+source:
+  fn: gawk-4.1.0.tar.xz
+  url: http://ftp.gnu.org/gnu/gawk/gawk-4.1.0.tar.xz
+
+build:
+  # If this is a new build for the same version, increment the build
+  # number. If you do not include this key, it defaults to 0.
+  number: 1
+
+  string:
+     build_on_debian_wheezy__p33
+
+requirements:
+  build:
+    - mpfr_stage1
+    
+about:
+    home: http://www.gnu.org/software/gawk/
+    license: GPL
