@@ -1,0 +1,23 @@
+package:
+  name: mpfr_stage1
+  version: 3.1.2
+
+source:
+  fn: mpfr-3.1.2.tar.xz
+  url: http://www.mpfr.org/mpfr-current/mpfr-3.1.2.tar.xz
+
+build:
+  # If this is a new build for the same version, increment the build
+  # number. If you do not include this key, it defaults to 0.
+  number: 1
+
+  string:
+     build_on_debian_wheezy__p33
+     
+requirements:
+  build:
+    - gmp_stage1
+    
+about:
+  home: http://www.mpfr.org/
+  license: LGPL
