@@ -1,3 +1,4 @@
+* started to add an whole self containing linux build/compile chain
 * updated conda to conda-2.2.5
 * added: recipe ta-lib-libraries and ta-lib
 * updated: recipe: conda: removed run requirement setuptools
